--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,24 @@
     </ul>
   </nav>
 </header>
-<div class="main-bkgd">
+
   <section class="main">
-    <p>Contact</p>
+  
+    <div class="main-bkgd">
+      
+        <article>
+          <h1>Contact</h1>
+          <h2>Address</h2>
+          <p>400 Fishermans Dock</p>
+          <p>San Francisco 94500 CA</p>
+          <a class="button" href="https://uxuicurriculum.wixsite.com/gulproast">Contact Us</a>
+        </article>
+        <figure>
+          <img src="./images gulp roast/gulp-pouring-coffee-vertical.jpg" alt="Making pour-over coffee at our shop." />
+          <figcaption>Our pour-over coffee is known for its freshness and amazing taste.</figcaption>
+        </figure>
+      </section>
+    </div>
    
   </section>
 </div>
